# aegis_project

./: .gitignore  README.md  gdpr_agent.py  internal_policy_agent.py  internal_security_agent.py  main.py  polish_law_agent.py  process_documents.py  process_gdpr.py  process_internal_procedures.py  process_polish_law.py  pyproject.toml  summarization_agent.py  test_queries.py
backend/: .gitignore  api.py  gdpr_agent.py  internal_security_agent.py  main.py  polish_law_agent.py  pyproject.toml  requirements.txt  summarization_agent.py
backend/agent/gdpr/: __init__.py  gdpr_agent.py  gdpr_citation_builder.py  gdpr_content_analyzer.py  gdpr_metadata_processor.py  gdpr_response_parser.py  gdpr_vector_store_connector.py
backend/agent/internal_security/: __init__.py  internal_security_agent.py  internal_security_citation_builder.py  internal_security_content_analyzer.py  internal_security_metadata_processor.py  internal_security_response_parser.py  internal_security_vector_store_connector.py
backend/agent/polish_law/: __init__.py  polish_law_agent.py  polish_law_citation_builder.py  polish_law_content_analyzer.py  polish_law_metadata_processor.py  polish_law_response_parser.py  (+1 more)
mcp_server/: __init__.py  pyproject.toml  run_server.py  server.py  test_server.py
mcp_server/summarization_reports/: compliance_report_20250606_140925.json  compliance_report_20250606_140928.json  compliance_report_20250606_140937.json  compliance_report_20250606_140939.json  compliance_report_20250606_140946.json  compliance_report_20250606_140948.json  compliance_report_20250606_141042.json
(+38 files in other folders)
