[project]
name = "aegis-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=0.3.25",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.24",
    "langchain-openai>=0.3.17",
    "langgraph>=0.4.5",
    "pypdf>=5.5.0",
    "pypdf2>=3.0.1",
]
