[project]
name = "aegis-project"
version = "0.1.0"
description = "Enhanced Multi-Agent Compliance System with API Backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=0.3.25",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.24",
    "langchain-openai>=0.3.17",
    "langgraph>=0.4.5",
    "pypdf>=5.5.0",
    "pypdf2>=3.0.1",
    # FastAPI backend dependencies
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
]